<resources>
    <string name="app_name">BarberShop</string>
    <string name="string_user">Inserisci l\'email</string>
    <string name="string_pwd">Inserisci la password</string>
    <string name="string_noAccount">Non hai un account?</string>
    <string name="string_signUp">Iscriviti!</string>
    <string name="btn_login">Accedi</string>
    <string name="string_logo">Logo</string>
    <string name="signupTitle">Registrazione</string>
    <string name="btnRegisterText">Registrati</string>
    <string name="select_service">Taglio capelli</string>
    <string name="select_time">09:00</string>
    <string name="home">Home</string>
    <string name="reviews">Recensioni</string>
    <string name="profile">Profilo</string>
    <string name="select_date_text">Seleziona la data</string>
    <string name="date_text_hint">Data</string>
    <string name="home_item">Home</string>
    <string name="review_item">Recensioni</string>
    <string name="profile_item">Profilo</string>
    <string name="add_review_title">Aggiunta recensione</string>
    <string name="position_item">Posizione</string>
    <string name="personal_date_title">Dati personali</string>
    <string name="name_text">Nome:</string>
    <string name="name_text_content">Atanas</string>
    <string name="surname_text">Cognome:</string>
    <string name="surname_text_content">Atanasov</string>
    <string name="e_mail_text">E-mail</string>
    <string name="email_text_content">atanas.atanasov@gmail.com</string>
    <string name="password_text">Password</string>
    <string name="books_title">Elenco prenotazioni</string>
    <string name="details">Dettagli</string>
    <string name="positionTitle">Posizione</string>
    <string name="review_description">Il barbiere ha eseguito alla lettera tutte le indicazioni richieste per il taglio. Complimenti!</string>
</resources>