<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<include layout="@layout/topbar"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_title"
            android:text="@string/select_date_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <EditText
            android:id="@+id/selected_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_date_range_24"
            android:hint="@string/date_text_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:imeOptions="flagNoExtractUi"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/service_select"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="Seleziona il servizio"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_date"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/select_service"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_select"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/brown_900"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxBackgroundColor="#30ffffff">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_select"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="Seleziona l'orario"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_service"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/select_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_select"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/brown_900"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxBackgroundColor="#30ffffff">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBook"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prenota"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:theme="@style/ButtonTextColor"
            app:backgroundTint="@color/brown_900"
            app:cornerRadius="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintTop_toBottomOf="@id/input_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--<TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnDatePicker"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
          />-->

        <View android:layout_width="match_parent"
            android:layout_height="75sp"
            app:layout_constraintTop_toBottomOf="@id/btnBook"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>